# COMP345

./: AggressiveComputer.cpp  AggressiveComputer.h  CMakeLists.txt  HumanPlayer.cpp  HumanPlayer.h  ModerateComputer.cpp  ModerateComputer.h  Observer.cpp  Observer.h  PhaseObserver.cpp  PhaseObserver.h  PhaseSubject.cpp  PhaseSubject.h  README.md  StatObserver.cpp  StatObserver.h  StatSubject.cpp  StatSubject.h  Strategy.h  Subject.cpp  Subject.h  card.cpp  card.h  deck.cpp  deck.h  dice.h  game.cpp  game.h  main.cpp  map.cpp  map.h  map2.txt  player.cpp  player.h  region.h  tile.h  token.h
